CHANGELOG
=========

MyKnowledgeBase version 2.6 - december 2015
- several files: updated postmetadata
- file style: several modifications
- several small adjustments
- updated pot file

MyKnowledgeBase version 2.5 - november 2015
- updated archive.php (added the_archive_title and the_archive_description)
- updated pot file
- removed translations (to support language packs from wordpress.org)
- several small adjustments

MyKnowledgeBase version 2.4 - september 2015
- updated knowledgebase page templates 
- updated file comments
- updated pagelink
- file footer: copyrights
- file archive and index: added pagetitle when no posts are found
- changed postmetadata heading into div
- reordered mobile stylesheet
- added Swedish translation (thanks Stefan)
- updated language files
- several small adjustments

MyKnowledgeBase version 2.2 - june 2015
- file single: removed if statement
- file functions, comments and style: changed alignment of comment nav
- reordered file style
- updated file readme

MyKnowledgeBase version 2.1 - april 2015
- several small adjustment in stylesheet
- removed support for document title in older WP versions
- files index and archive: pagination inside loop

MyKnowledgeBase version 2.0 - february 2015
- added Spanish translation (thanks Miquel)
- added German translation (thanks Frank)
- updated French translation (thanks Ollie)
- file style: adjusted styling comments area
- file style: added support in Chrome for Checkbox, Radio and Select
- file style and file custom-editor-style: finetuned img position in post and page
- file style: reordered mobile stylesheet
- file footer: added div around footer-widgets
- file functions: removed class excerpt because not used anymore
- file functions: added class to posts nav (now no empty space when posts nav is not present)

MyKnowledgeBase version 1.9 - december 2014
- file header: removed wp_title because of new title-tag
- file functions: added backwards compatibility for WP 4.0 and older