@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 2.6
+Version: 2.7
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: primary sidebar, homepage sidebar, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description, full width page template, dropdown navigation. That's it. Enjoy. 
@@ -299,9 +299,9 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 #footer .widget {margin:15px 0 0; border-bottom:1px solid #fff;}
 #footer .widgettitle {color:#fff;}
 
-.footer-left {float:left; width:32%; margin:5px 0 0; padding:0;}
-.footer-middle {float:left; width:32%; margin:5px 2% 0; padding:0;}
-.footer-right {float:right; width:32%; margin:5px 0 0; padding:0;}
+.footer-left {float:left; width:32%; margin:5px 0 0;}
+.footer-middle {float:left; width:32%; margin:5px 2% 0;}
+.footer-right {float:right; width:32%; margin:5px 0 0;}
 
 
 /* FOOTER INPUTS */
